# hydro-gen

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
glsl/: bicubic.glsl  bindings.glsl  compute.glsl  compute_vertices.glsl  erosion.glsl  frag.glsl  heightmap.glsl  heightmap_part.glsl  hydro_erosion.glsl  hydro_flux.glsl  img_interpolation.glsl  particle.glsl  particle_erosion.glsl  rain.glsl  rendering.glsl  sediment_transport.glsl  simplex_noise.glsl  smoothing.glsl  thermal_erosion.glsl  thermal_transport.glsl  vert.glsl  water_flux.glsl
src/: erosion.cpp  erosion.hpp  input.cpp  input.hpp  main.cpp  rendering.cpp  rendering.hpp  settings.hpp  shaderprogram.cpp  shaderprogram.hpp  state.cpp  state.hpp  utils.cpp  utils.hpp
